--- a/app/src/main/res/layout/list_item_tour.xml
+++ b/app/src/main/res/layout/list_item_tour.xml
@@ -36,7 +36,7 @@
             tools:text="@tools:sample/cities" />
 
         <TextView
-            android:id="@+id/tour_location"
+            android:id="@+id/tour_location_image"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
