--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -11,7 +11,11 @@
         android:label="TourListFragment" >
         <action
             android:id="@+id/action_tourListFragment_to_tourFragment"
-            app:destination="@id/tourFragment" />
+            app:destination="@id/tourFragment"
+            app:enterAnim="@anim/slide_in_from_right"
+            app:exitAnim="@anim/slide_out_to_left"
+            app:popEnterAnim="@anim/slide_in_from_left"
+            app:popExitAnim="@anim/slide_out_to_right" />
         <action
             android:id="@+id/action_tourListFragment_to_infoFragment"
             app:destination="@id/infoFragment" />
@@ -25,10 +29,18 @@
             app:argType="string" />
         <action
             android:id="@+id/action_tourFragment_to_mapsFragment"
-            app:destination="@id/mapsFragment" />
+            app:destination="@id/mapsFragment"
+            app:enterAnim="@anim/slide_in_from_right"
+            app:exitAnim="@anim/slide_out_to_left"
+            app:popEnterAnim="@anim/slide_in_from_left"
+            app:popExitAnim="@anim/slide_out_to_right" />
         <action
             android:id="@+id/action_tourFragment_to_requestFragment"
-            app:destination="@id/requestFragment" />
+            app:destination="@id/requestFragment"
+            app:enterAnim="@anim/slide_in_from_right"
+            app:exitAnim="@anim/slide_out_to_left"
+            app:popEnterAnim="@anim/slide_in_from_left"
+            app:popExitAnim="@anim/slide_out_to_right" />
     </fragment>
 
     <fragment
@@ -39,11 +51,7 @@
     <fragment
         android:id="@+id/mapsFragment"
         android:name="com.johnmarsel.diplom.MapsFragment"
-        android:label="{dynamicTitle}" >
-        <argument
-            android:name="dynamicTitle"
-            app:argType="string" />
-    </fragment>
+        android:label="Отель на карте" />
     <fragment
         android:id="@+id/requestFragment"
         android:name="com.johnmarsel.diplom.RequestFragment"
