--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -8,7 +8,7 @@
     <fragment
         android:id="@+id/tourListFragment"
         android:name="com.johnmarsel.diplom.TourListFragment"
-        android:label="TourListFragment" >
+        android:label="@string/app_name" >
         <action
             android:id="@+id/action_tourListFragment_to_tourFragment"
             app:destination="@id/tourFragment"
