--- a/app/src/main/res/layout/list_item_tour.xml
+++ b/app/src/main/res/layout/list_item_tour.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/card_view"
     android:layout_width="match_parent"
@@ -23,87 +24,31 @@
             card_view:layout_constraintTop_toTopOf="parent"
             tools:srcCompat="@tools:sample/backgrounds/scenic" />
 
-        <ImageView
-            android:id="@+id/tour_1star"
-            android:layout_width="15dp"
-            android:layout_height="15dp"
+
+        <me.zhanghai.android.materialratingbar.MaterialRatingBar
+            android:id="@+id/tourRatingBar"
+            style="@style/Widget.MaterialRatingBar.RatingBar.Indicator.Small"
+            android:progressBackgroundTint="@color/white"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginStart="4dp"
             android:layout_marginTop="8dp"
-            android:scaleType="centerCrop"
-            android:src="@drawable/star_48px"
             card_view:layout_constraintEnd_toEndOf="parent"
-            card_view:layout_constraintHorizontal_bias="0.0"
+            card_view:layout_constraintHorizontal_bias="0.012"
             card_view:layout_constraintStart_toStartOf="parent"
-            card_view:layout_constraintTop_toBottomOf="@+id/tour_image"
-            tools:srcCompat="@tools:sample/backgrounds/scenic" />
-
-        <ImageView
-            android:id="@+id/tour_2star"
-            android:layout_width="15dp"
-            android:layout_height="15dp"
-            android:layout_marginStart="14dp"
-            android:layout_marginTop="8dp"
-            android:scaleType="centerCrop"
-            android:src="@drawable/star_48px"
-            card_view:layout_constraintEnd_toEndOf="parent"
-            card_view:layout_constraintHorizontal_bias="0.0"
-            card_view:layout_constraintStart_toStartOf="@id/tour_1star"
-            card_view:layout_constraintTop_toBottomOf="@+id/tour_image"
-            tools:srcCompat="@tools:sample/backgrounds/scenic" />
-
-        <ImageView
-            android:id="@+id/tour_3star"
-            android:layout_width="15dp"
-            android:layout_height="15dp"
-            android:layout_marginStart="14dp"
-            android:layout_marginTop="8dp"
-            android:scaleType="centerCrop"
-            android:src="@drawable/star_48px"
-            card_view:layout_constraintEnd_toEndOf="parent"
-            card_view:layout_constraintHorizontal_bias="0.0"
-            card_view:layout_constraintStart_toStartOf="@id/tour_2star"
-            card_view:layout_constraintTop_toBottomOf="@+id/tour_image"
-            tools:srcCompat="@tools:sample/backgrounds/scenic" />
-
-        <ImageView
-            android:id="@+id/tour_4star"
-            android:layout_width="15dp"
-            android:layout_height="15dp"
-            android:layout_marginStart="14dp"
-            android:layout_marginTop="8dp"
-            android:scaleType="centerCrop"
-            android:src="@drawable/star_48px"
-            card_view:layout_constraintEnd_toEndOf="parent"
-            card_view:layout_constraintHorizontal_bias="0.0"
-            card_view:layout_constraintStart_toStartOf="@id/tour_3star"
-            card_view:layout_constraintTop_toBottomOf="@+id/tour_image"
-            tools:srcCompat="@tools:sample/backgrounds/scenic" />
-
-        <ImageView
-            android:id="@+id/tour_5star"
-            android:layout_width="15dp"
-            android:layout_height="15dp"
-            android:layout_marginStart="14dp"
-            android:layout_marginTop="8dp"
-            android:scaleType="centerCrop"
-            android:src="@drawable/star_48px"
-            card_view:layout_constraintEnd_toEndOf="parent"
-            card_view:layout_constraintHorizontal_bias="0.0"
-            card_view:layout_constraintStart_toStartOf="@id/tour_4star"
-            card_view:layout_constraintTop_toBottomOf="@+id/tour_image"
-            tools:srcCompat="@tools:sample/backgrounds/scenic" />
+            card_view:layout_constraintTop_toBottomOf="@+id/tour_image" />
 
         <TextView
             android:id="@+id/tour_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="4dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="40dp"
             android:textAppearance="@style/TextAppearance.AppCompat.Medium"
             android:textColor="@color/black"
             android:textSize="16sp"
             card_view:layout_constraintStart_toStartOf="parent"
-            card_view:layout_constraintTop_toBottomOf="@+id/tour_1star"
+            card_view:layout_constraintTop_toBottomOf="@id/tour_image"
             tools:text="@tools:sample/cities" />
 
         <TextView
@@ -112,6 +57,8 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="4dp"
             android:layout_marginTop="4dp"
+            card_view:layout_constraintEnd_toStartOf="@+id/tour_price"
+            card_view:layout_constraintHorizontal_bias="0.0"
             card_view:layout_constraintStart_toStartOf="parent"
             card_view:layout_constraintTop_toBottomOf="@+id/tour_title" />
 
